--- a/stylesheets/all.scss
+++ b/stylesheets/all.scss
@@ -1,7 +1,14 @@
+//-------色彩變數---------//
+$primary:rgba(207,115,64,1);
+$primary-trnsparent:rgba(207,115,64, 0.8);
+$secondary :#F7EF99;
 
 @import "../node_modules/bootstrap/scss/functions";
 @import "helpers/variables";
 @import "../node_modules/bootstrap/scss/bootstrap";
+//-------模組化-----------//
+@import "progress-steps";
+@import "item-box";
 
 //-------index-----------//
 .header-banner{
@@ -12,7 +19,7 @@
     background-position: center center;
 }
 .mobile-cart{
-    color: rgba(207,115,64,0.8);
+    color: $primary-trnsparent;
 }
 .carts-input-group{
     width: 150px !important;
@@ -26,25 +33,24 @@
     letter-spacing: 0.25rem;
     cursor: pointer;
     a{
-        color: rgba(207,115,64, 0.8);
+        color: $primary-trnsparent;
         text-decoration: none;
         .header-menu-bg{
             backdrop-filter: blur(5px);
             height: 256px;
-            background-color:#F7EF99;//rgba(255,255,64, 0.8) ;
+            background-color: $secondary;
             transition: all 1s;
         }
         .active{
             backdrop-filter: blur(0px);
-            background-color:rgba(207,115,64, 0.8) ;
+            background-color: $primary-trnsparent ;
             color:white;
+        } 
     }
-    
-}
     a:hover{
         .header-menu-bg{
             backdrop-filter: blur(0px);
-            background-color:rgba(207,115,64, 0.8) ;
+            background-color: $primary-trnsparent;
             color:white;
         }
     }
@@ -65,57 +71,10 @@
     letter-spacing: 0.25rem;
     margin-top: -20px;
 }
-.item-box-img{
-    height: 15rem;
-    width: 100%;
-}
-.item-box{
-    position: relative;
-    .item-tag{
-        position: absolute;
-        writing-mode: vertical-rl;
-        top: 0px;
-        left: 20px;
-        font-weight: bold;
-        letter-spacing: 0.5rem;
-        background-color: rgba(207,115,64,1);
-    }
-    .item-tag-hot{
-        position: absolute;
-        writing-mode: vertical-rl;
-        top: 0px;
-        left: 20px;
-        font-weight: bold;
-        letter-spacing: 0.5rem;
-        background-color:red;
-    }
-    .item-tag-new{
-        position: absolute;
-        writing-mode: vertical-rl;
-        top: 0px;
-        left: 20px;
-        font-weight: bold;
-        letter-spacing: 0.5rem;
-        background-color:greenyellow;
-    }
-}
-.item-box-name{
-        padding-top: 15px;
-        padding-bottom: 15px;
-        font-size: 1.25rem;
-}
-.item-favorite{
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    color: rgba(207,115,64,1);
-    cursor: pointer;
-}
 //--------product----------//
 .list-group-item-action{
     transition: all.5s;
 }
-
 //--------cart------------//
 .cart-item{ 
     .cart-img{
@@ -132,96 +91,7 @@
     padding-left: 20px;
     font-size: 1.25rem;
 }
-.progress-steps{
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    .progress-item{
-        position: relative;
-        width: 20px;
-        height: 20px;
-        border: 2px white solid;
-        background-color: rgba(207,115,64,1) ;
-        border-radius: 50%;
-        z-index: 1;
-    }
-}
-.progress-steps::after{
-    content: "";
-    position: absolute;
-    height: 2px;
-    background-color: #eaf0ed;
-    top: 50%;
-    left: 0;
-    right: 0;
-    z-index: 0;
-}
-.progress-steps .progress-item.active:after {
-    position: absolute;
-    content: "";
-    height: 12px;
-    width: 12px;
-    top: 2px;
-    left: 2px;
-    border-radius: 50%;
-    background-color: #eaf0ed;
-}
-.progress-steps .progress-item.finish:after {
-    position: absolute;
-    content: "";
-    height: 20px;
-    width: 20px;
-    top: -2px;
-    left: -2px;
-    border-radius: 50%;
-    background-color: #eaf0ed;
-    z-index: -1;
-}
-.fa-check{
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 2;
-}
-//----success---//
-
-.progress-steps-dark{
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    .progress-item{
-        position: relative;
-        width: 20px;
-        height: 20px;
-        border: 2px white solid;
-        background-color: rgba(207,115,64,1) ;
-        border-radius: 50%;
-        z-index: 1;
-    }
-}
-.progress-steps-dark::after{
-    content: "";
-    position: absolute;
-    height: 2px;
-    background-color: rgba(207,115,64,1);
-    top: 50%;
-    left: 0;
-    right: 0;
-    z-index: 0;
-}
-.progress-steps-dark .progress-item.finish:after {
-    position: absolute;
-    content: "";
-    height: 20px;
-    width: 20px;
-    top: -2px;
-    left: -2px;
-    border-radius: 50%;
-    background-color: rgba(207,115,64,1);
-    z-index: -1;
-}
+//--------RWD-------------//
 @media(max-width:992px){
     .banner-text{
         height: 17.5rem;
