--- a/stylesheets/helpers/_variables.scss
+++ b/stylesheets/helpers/_variables.scss
@@ -66,8 +66,8 @@ $colors: map-merge(
   $colors
 );
 
-$primary:       $blue !default;
-$secondary:     $gray-600 !default;
+$primary:       rgba(207,115,64,1);//$blue !default;
+$secondary:     #F7EF99;//$gray-600 !default;
 $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
