--- a/stylesheets/all.scss
+++ b/stylesheets/all.scss
@@ -1,7 +1,3 @@
-//-------色彩變數---------//
-$primary:rgba(207,115,64,1);
-$primary-trnsparent:rgba(207,115,64, 0.8);
-$secondary :#F7EF99;
 
 @import "../node_modules/bootstrap/scss/functions";
 @import "helpers/variables";
@@ -19,7 +15,7 @@ $secondary :#F7EF99;
     background-position: center center;
 }
 .mobile-cart{
-    color: $primary-trnsparent;
+    color: rgba($primary,.8 );// $primary-trnsparent;
 }
 .carts-input-group{
     width: 150px !important;
@@ -33,7 +29,7 @@ $secondary :#F7EF99;
     letter-spacing: 0.25rem;
     cursor: pointer;
     a{
-        color: $primary-trnsparent;
+        color: rgba($primary,.8 );
         text-decoration: none;
         .header-menu-bg{
             backdrop-filter: blur(5px);
@@ -43,14 +39,14 @@ $secondary :#F7EF99;
         }
         .active{
             backdrop-filter: blur(0px);
-            background-color: $primary-trnsparent ;
+            background-color: rgba($primary,.8 );
             color:white;
         } 
     }
     a:hover{
         .header-menu-bg{
             backdrop-filter: blur(0px);
-            background-color: $primary-trnsparent;
+            background-color:  rgba($primary,.8 );
             color:white;
         }
     }
@@ -97,6 +93,12 @@ $secondary :#F7EF99;
         height: 17.5rem;
         writing-mode: horizontal-tb;
     }
+    .cart-item{
+        .cart-border{
+            border-top: 1px rgba(0, 0, 0, 0.125) solid;
+            border-bottom: 1px rgba(0, 0, 0, 0.125) solid;
+        }
+    }
 }
 @media (max-width:768px) {
     .banner-img{
@@ -108,11 +110,6 @@ $secondary :#F7EF99;
     .header-menu{
         margin-top: 0px;
     }
-    .cart-item{
-        .cart-border{
-            border-top: 1px rgba(0, 0, 0, 0.125) solid;
-            border-bottom: 1px rgba(0, 0, 0, 0.125) solid;
-        }
-    }
+   
     
 }
